リファクタリング：test内